# PyV_NPU_simulator

./: .gitignore  README.md  create_test_model.py  debug_log.txt  debugging_log_20250829.txt  pr_body.md  pyproject.toml  test_model.onnx
docs/: Code_Review.md  PyV-NPU_PRD_v1.1_full.md  kanban_board.md  working_history.md
docs/analysis/: comprehensive_code_review.md  debugging_log_test_singlecycle.md
docs/architecture/: HW_Aware_IR_Spec_Instruction_Level.md  README.md  code_review.md  code_review_summray.md  hw_aware_ir.proto  memory_and_clock_analysis.md  system_analysis.md  system_architecture.md
docs/archive/: NPU_Instruction_accurate_Cache_level.md  NPU_Simulator_Memory_Hierarchy.md  NPU_buffer_cache.md  PyV-NPU_Simulator_PRD_v0.2.md  code_review.md  memory_and_clock_analysis.md  tinygrad_frontend_support.md
docs/planning/: ARC-02_L1_Cache_Implementation_Plan.md  feature_roadmap.md  initialize.md  kanban_board.md  task_completion_checklist.md  working_history.md
docs/prd/: NPU_Simulator_Memory_Hierarchy.md  PRD_RISC-V_NPU_coupled_mode.md  PRD_Tinygrad_to_HW_Aware_IR.md  README.md  pyv_npu_runtime.md
examples/: run_example.sh  tinyllama.onnx
py-v/: README.md  main.py
py-v/programs/: Makefile
py-v/pyv/: cache.py  cache_config.py  csr.py  exception_unit.py  mem.py  memory_system.py  reg.py  (+1 more)
pyv_npu/: __init__.py  config.py
tests/: conftest.py  test_burst_size_impact.py  test_config.py  test_dram_policy_comparison.py  test_l2_cache_impact.py  test_reporting.py  test_scheduler.py  test_simple_matmul.py  test_smoke.py  test_tight_mode_overhead.py
(+39 files in other folders)
